2012-01-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-mode): Don't make bidi-paragraph-direction
	bound globally in old Emacsen and XEmacsen.

2012-01-26  Nick Alcock  <nick.alcock@oracle.com>  (tiny change)

	* gnus.el (gnus-group-find-parameter): Check for liveness of the
	buffer, not of the string which is its name.

2012-01-26  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-move-article): Don't propagate marks to
	non-server-marks groups.
	(gnus-group-make-articles-read): Ditto.

	* gnus-srvr.el (gnus-server-prepare): Use it to avoid showing ephemeral
	methods (bug#9676).

	* gnus.el (gnus-method-ephemeral-p): New function.

2012-01-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-mode): Force paragraph direction to be
	left-to-right.

2012-01-26  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnir-search-thread): Autoload to avoid a compilation
	warning.

2012-01-25  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-line-format-alist): Don't try to
	macroexpand the nnir things, since they haven't been defined yet, and
	nnir requires gnus-sum.

2012-01-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mm-decode.el (mm-interactively-view-part): Fix prompt.

2012-01-10  Teodor Zlatanov  <tzz@lifelogs.com>

	* nntp.el (nntp-send-authinfo): Query `auth-source-search' with the
	logical server name in addition to the actual machine address.

	* auth-source.el (auth-source-user-and-password): Add convenience
	wrapper to search by just host and optionally user.

2012-01-07  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-visit-file): Move point to the beginning of the buffer
	after rendering.

2012-01-07  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-read-group): Document more parameters
	(bug#9693).
	(gnus-summary-setup-buffer): Document return value (bug#9697).

	* mm-decode.el (mm-interactively-view-part): Use `completing-read',